[package]
name = "nixpacks"
version = "0.3.12"
edition = "2021"
license = "MIT"
authors = ["Railway <contact@railway.app>"]
description = "Generate an OCI compliant image based off app source"
readme = "README.md"
homepage = "https://github.com/railwayapp/nixpacks"
repository = "https://github.com/railwayapp/nixpacks"
rust-version = "1.57"
exclude = ["examples/", "docs/"]

[[bin]]
name = "nixpacks"
path = "src/main.rs"

[lib]
name = "nixpacks"
path = "src/lib.rs"

[workspace]
members = ["test-helper"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
clap = { version = "3.2.16", features = ["std"], default-features = false }
colored = "2.0.0"
globset = { default-features = false, version = "0.4.9" }
walkdir = "2.3.2"
indoc = "1.0.6"
regex = "1.6.0"
serde = { version = "1.0.140", default-features = false }
serde_json = "1.0.82"
serde_yaml = "0.8.26"
serde_with = { features = ["macros"], default-features = false, version = "1.14.0" }
tempdir = "0.3.7"
toml = "0.5.9"
uuid = { version = "1.1.2", features = ["v4"], default-features = false }
wait-timeout = "0.2.0"
base64 = "0.13.0"
console = { default-features = false, version = "0.15.0" }
box_drawing = "0.1.2"
textwrap = { default-features = false, version = "0.15.0" }
cargo_toml = "0.11.5"
rand = "0.8.5"
path-slash = "0.2.1"

[dev-dependencies]
dotenv-parser = "0.1.3"
insta = { version = "1.18.2", features = ["redactions", "json"] }
test-helper = { path = "./test-helper" }

[package.metadata.deb]
# https://packages.debian.org/stretch
section = "devel"

