[package]
name = "nixpacks"
version = "1.33.0"
edition = "2021"
license = "MIT"
authors = ["Railway <contact@railway.app>"]
description = "Generate an OCI compliant image based off app source"
readme = "README.md"
homepage = "https://github.com/railwayapp/nixpacks"
repository = "https://github.com/railwayapp/nixpacks"
rust-version = "1.60"
exclude = ["examples/", "docs/"]

[[bin]]
name = "nixpacks"
path = "src/main.rs"

[lib]
name = "nixpacks"
path = "src/lib.rs"

[workspace]
members = ["test-helper"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.29", features = ["derive"] }
colored = "2.0.0"
globset = { default-features = false, version = "0.4.9" }
walkdir = "2.3.2"
indoc = "1.0.7"
regex = "1.7.0"
serde = { version = "1.0.151", default-features = false }
serde_json = "1.0.89"
serde_yaml = "0.9.14"
serde_with = { features = [
    "macros",
], default-features = false, version = "2.1.0" }
tempdir = "0.3.7"
toml = "0.5.10"
uuid = { version = "1.2.2", features = ["v4"], default-features = false }
wait-timeout = "0.2.0"
base64 = "0.20.0"
console = { default-features = false, version = "0.15.2" }
box_drawing = "0.1.2"
textwrap = { default-features = false, version = "0.16.0" }
cargo_toml = "0.20.4"
rand = "0.8.5"
path-slash = "0.2.1"
ignore = "0.4.18"
actix-web = "4.2.1"
sanitize-filename = "0.4.0"
futures-util = "0.3.25"
futures = "0.3.25"
portpicker = "0.1.1"
tokio = { version = "1.23.0", features = ["full"] }
async-trait = "0.1.59"
semver = "1.0.14"
node-semver = "2.1.0"

[dev-dependencies]
dotenv-parser = "0.1.3"
insta = { version = "1.23.0", features = ["redactions", "json"] }
test-helper = { path = "./test-helper" }

[package.metadata.deb]
# https://packages.debian.org/stretch
section = "devel"
