[package]
name = "test-helper"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv-parser = "0.1.3"
globset = "0.4.9"
proc-macro2 = "1.0.43"
quote = "1.0.21"
rand = "0.8.5"
walkdir = "2.3.2"
