[package]
name = "test-helper"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.89"
serde_yaml = "0.9.14"
serde_with = { features = [
    "macros",
], default-features = false, version = "2.1.0" }
globset = "0.4.9"
proc-macro2 = "1.0.43"
quote = "1.0.21"
walkdir = "2.3.2"
serde = { version = "1.0.151", features = ["derive"] }
